--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,12 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: rgb(23,11,223);
+  background: linear-gradient(90deg, rgba(23,11,223,1) 0%, rgba(82,6,126,1) 36%, rgba(1,104,125,1) 100%);
+  color: #f6fffe;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  font-family: 'Press Start 2P', cursive;
+  color: #f6fffe;
 }
