--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 body {
-  margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -8,9 +7,24 @@ body {
   background: rgb(23,11,223);
   background: linear-gradient(90deg, rgba(23,11,223,1) 0%, rgba(82,6,126,1) 36%, rgba(1,104,125,1) 100%);
   color: #f6fffe;
+  margin-top: 280px!important;
 }
 
 h1 {
   font-family: 'Press Start 2P', cursive;
   color: #f6fffe;
+}
+
+.header {
+height: 240px;
+display: flex;
+flex-direction: column;
+justify-content: center;
+position: fixed;
+top: 0;
+width: 100%;
+z-index: 2;
+background: rgb(23,11,223);
+background: linear-gradient(90deg, rgba(23,11,223,1) 0%, rgba(82,6,126,1) 36%, rgba(1,104,125,1) 100%);
+border-bottom: 1px solid black;
 }
